--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "express": "^5.1.0",
+    "ics": "^3.8.1",
     "jsdom": "^27.0.0",
+    "moment": "^2.30.1",
+    "node-ical": "^0.21.0",
     "qs": "^6.14.0",
     "zod": "^3.21.4"
   },
