--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ics": "^3.8.1",
     "jsdom": "^27.0.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "node-ical": "^0.21.0",
     "qs": "^6.14.0",
     "zod": "^3.21.4"
